--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Lista 1</h1>
-    <a href="Lista 1/Lista 1 - Questão 2.html">Questão 2</a>
+    <p><a href="Lista 1/Lista 1 - Questão 2.html">Questão 2</a></p> 
+    <p><a href="Lista 1/Lista 1 - Questão 3.html">Questão 3</a></p>
 </body>
 </html>
