--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Lista 1</h1>
     <p><a href="Lista 1/Lista 1 - Questão 2.html">Questão 2</a></p> 
     <p><a href="Lista 1/Lista 1 - Questão 3.html">Questão 3</a></p>
+    <p><a href="Lista 1/Lista 1 - Questão 5.html/index.html">Questão 5</a></p>
 </body>
 </html>
