--- a/Lista 1/Lista 1 - Questão 5.html/agendamento&contato.html
+++ b/Lista 1/Lista 1 - Questão 5.html/agendamento&contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia do Cleiton - Página Inicial</title>
+    <title>Barbearia do Cleiton - Agendamento e Contato</title>
 </head>
 <body>
     <section id="ini">
