--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
     <p><a href="Lista 1/Lista 1 - Questão 3.html">Questão 3</a></p>
     <p><a href="Lista 1/Lista 1 - Questão 5.html/index.html">Questão 5</a></p>
 </body>
+    <h1>Atividade Seletores</h1>
+    <p><a href="Atividade Prática - Seletores/atividadeSeletores.html">Questão 5</a></p>
 </html>
