--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <p><a href="Lista 1/Lista 1 - Questão 3.html">Questão 3</a></p>
     <p><a href="Lista 1/Lista 1 - Questão 5.html/index.html">Questão 5</a></p>
     <h1>Atividades</h1>
-    <p><a href="Atividade Prática - Seletores/atividadeSeletores.html">Atividade Seletores</a></p>
+    <p><a href="Atividade Prática - 02/atividadeCSS.html">Atividade Prática 02 - CSS</a></p>
+    <p><a href="Atividade Prática - 03/atividadeSeletores.html">Atividade Prática 03 - Seletores</a></p>
+    <p><a href="Atividade Prática - 04/Loja/exercicio.html">Atividade Prática 04 - Loja</a></p>
+    <p><a href="Atividade Prática - 04/Pizzaria/exercicio.html">Atividade Prática 04 - Pizzaria</a></p>
 </body>
 </html>
