--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <p><a href="Atividade Prática - 03/atividadeSeletores.html">Atividade Prática 03 - Seletores</a></p>
     <p><a href="Atividade Prática - 04/Loja/exercicio.html">Atividade Prática 04 - Loja</a></p>
     <p><a href="Atividade Prática - 04/Pizzaria/exercicio.html">Atividade Prática 04 - Pizzaria</a></p>
+    <p><a href="Atividade Prática - 05/Loja/exercicio.html">Atividade Prática 04 - Loja</a></p>
+    <p><a href="Atividade Prática - 05/Pizzaria/exercicio.html">Atividade Prática 04 - Pizzaria</a></p>
 </body>
 </html>
