--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p><a href="Atividade Prática - 04/Pizzaria/exercicio.html">Atividade Prática 04 - Pizzaria</a></p>
     <p><a href="Atividade Prática - 05/Loja/exercicio.html">Atividade Prática 05 - Loja</a></p>
     <p><a href="Atividade Prática - 05/Pizzaria/exercicio.html">Atividade Prática 05 - Pizzaria</a></p>
+    <p><a href="Atividade Prática - 06/Obra-Artistica.html">Atividade Prática 06 - Flexbox</a></p>
 </body>
 </html>
