--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <p><a href="Atividade Prática - 05/Pizzaria/exercicio.html">Atividade Prática 05 - Pizzaria</a></p>
     <p><a href="Atividade Prática - 06/Obra-Artistica.html">Atividade Prática 06 - Flexbox</a></p>
     <p><a href="Atividade Prática - 07/posicione-elementos-com-flexbox-809f39a39e473c574e3c6d9d9929626f8d1352fa/index.html">Atividade Prática 07 - Flexbox</a></p>
+    <p><a href="Atividade Prática - 08/atividade.html">Atividade Prática 08 - CSS-Grid</a></p>
 </body>
 </html>
