--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <p><a href="Atividade Prática - 07/posicione-elementos-com-flexbox-809f39a39e473c574e3c6d9d9929626f8d1352fa/index.html">Atividade Prática 07 - Flexbox</a></p>
     <p><a href="Atividade Prática - 08/atividade.html">Atividade Prática 08 - CSS-Grid</a></p>
     <p><a href="game-store/index.html">Atividade Prática 09 - CSS-Grid2 (GameStore)</a></p>
+    <p><a href="Atividade Prática - 10/index.html">Atividade Prática 10 - JS</a></p>
 </body>
 </html>
