main index update

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <p><a href="Atividade Prática - 08/atividade.html">Atividade Prática 08 - CSS-Grid</a></p>
     <p><a href="game-store/index.html">Atividade Prática 09 - CSS-Grid2 (GameStore)</a></p>
     <p><a href="Atividade Prática - 10/index.html">Atividade Prática 10 - JS</a></p>
+    <p><a href="Atividade Prática - 11/index.html">Atividade Prática 11 - JS</a></p>
 </body>
 </html>
