--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <p><a href="game-store/index.html">Atividade Prática 09 - CSS-Grid2 (GameStore)</a></p>
     <p><a href="Atividade Prática - 10/index.html">Atividade Prática 10 - JS</a></p>
     <p><a href="Atividade Prática - 11/index.html">Atividade Prática 11 - JS</a></p>
+    <p><a href="Atividade Prática - 12/Questão 1.html">Atividade Prática 12 - JS (Só fiz a 1)</a></p>
+    <p><a href="Atividade Prática - 13/index.html">Atividade Prática 13 - JS</a></p>
 </body>
 </html>
